[thiago] dWhPzOzX fixes post footer and aligns it to the post content

--- a/themes/main/src/sass/partials/footer.scss
+++ b/themes/main/src/sass/partials/footer.scss
@@ -36,6 +36,19 @@ $social-margin: 10px;
   }
 }
 
+#page-footer .footer-container-post {
+  @include media-query(THREE) {
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px 30px;
+  }
+
+  @include media-query(FOUR) {
+    width: 4 * $COLUMN-WIDTH;
+    padding: 20px 0;
+  }
+}
+
 #page-footer .footer-photo-caption-list {
   @include media-query(THREE) {
     width: 3 * $COLUMN-WIDTH;
